src/styles/canvas-item.scss
.outter {
  $outline-width: 3px;

  position: absolute;
  width: var(--width);
  height: var(--height);
  user-select: none;
  transform: translateX(var(--x)) translateY(var(--y));
  cursor: pointer;

  &:not(&--selected):hover {
    box-shadow: 0px 0px 0px calc($outline-width / var(--scale)) #18a0fb67;
  }

  &--selected {
    box-shadow: 0px 0px 0px calc($outline-width / var(--scale)) #18a0fb;
  }
}

